--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/flagTxt"
+        android:id="@+id/category_lable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ContinentText"
+        android:text=" Category Text"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
