--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorPrimär">#FBBFE4</color>
+    <color name="colorPrimärMörk">#FC7ECC</color>
+
+    <color name="colorSekundär">#D3FFFC</color>
+    <color name="colorSekundärMörk">#76CBC4</color>
+
+    <color name="colorTartiär">#FFE6A5</color>
+
+    <color name="colorMörkGrå">#707070</color>
+    <color name="colorMellanGrå">#C4C4C4</color>
+    <color name="colorLjusGrå">#DBDBDB</color>
 </resources>
