--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorPrimary"/>
+    <item android:drawable="@color/colorSekundär"/>
+    <item android:background="@color/colorSekundär"/>
     <item>
-        <bitmap android:src="@drawable/smiley"
-            android:gravity="center"/>
+        <bitmap android:src="@drawable/splash"
+            android:gravity="bottom"/>
     </item>
 </layer-list>
