--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -9,16 +9,17 @@
         android:id="@+id/home_label"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/gabon"
+        android:layout_margin="7dp"
+        android:background="@color/colorMellanGrå"
+        android:gravity="center"
         android:text="@string/home_text"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_margin="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
