--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorSekundär"/>
-    <item android:background="@color/colorSekundär"/>
+    <item android:drawable="@color/colorSecondary"/>
+    <item android:background="@color/colorSecondary"/>
     <item>
         <bitmap android:src="@drawable/splash"
             android:gravity="bottom"/>
