--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -33,6 +33,7 @@
         android:text="@string/question_text"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         app:layout_constraintDimensionRatio="w,1:10"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +51,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="casual"
         android:textStyle="bold"
+        android:textColor="@color/colorBlack"
         android:text="@string/sort_text"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
