--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pinkwave"
+    android:background="@color/colorDarkGray"
     tools:context="com.videlilja.linda.lia.screen.quiz.QuizActivity">
 
     <TextView
@@ -15,8 +15,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:gravity="center"
+        android:text="@string/animals"
         android:textAlignment="center"
-        android:text="@string/quiz_text"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -25,16 +25,14 @@
         android:id="@+id/question_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="casual"
         android:gravity="center"
         android:text="@string/question_text"
         android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/colorBlack"
-        android:textSize="24sp"
+        android:textColor="@color/colorTertiary"
+        android:textSize="21sp"
         app:layout_constraintDimensionRatio="w,1:10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,16 +42,15 @@
         android:id="@+id/sort_text"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:textAlignment="center"
-        android:gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:fontFamily="casual"
-        android:textStyle="bold"
-        android:textColor="@color/colorBlack"
+        android:gravity="center"
         android:text="@string/sort_text"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_text" />
