--- a/app/src/main/res/layout/activity_end_of_game.xml
+++ b/app/src/main/res/layout/activity_end_of_game.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.videlilja.linda.lia.screen.endofgame.EndOfGameActivity">
 
+
+    <ImageView
+        android:id="@+id/categorywave"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/sandwave" />
+
 </android.support.constraint.ConstraintLayout>
