--- a/app/src/main/res/layout/activity_end_of_game.xml
+++ b/app/src/main/res/layout/activity_end_of_game.xml
@@ -25,16 +25,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitXY"
-
         app:layout_constraintDimensionRatio="1:1"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/camel" />
 
     <Button
-        android:id="@+id/terminate"
+        android:id="@+id/quit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -44,6 +42,7 @@
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
         android:text="@string/end"
+        android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/home"
@@ -62,12 +61,13 @@
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
         android:text="@string/home"
+        android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/repeat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/terminate" />
+        app:layout_constraintTop_toBottomOf="@+id/quit" />
 
     <Button
         android:id="@+id/repeat"
@@ -80,6 +80,7 @@
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
         android:text="@string/retry"
+        android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
