--- a/app/src/main/res/layout/activity_end_of_game.xml
+++ b/app/src/main/res/layout/activity_end_of_game.xml
@@ -88,4 +88,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home" />
 
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/nice"
+        android:textAlignment="center"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/result" />
+
 </android.support.constraint.ConstraintLayout>
