--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,16 +24,19 @@
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorTertiary"
+        android:background="@color/colorSecondaryDark"
         android:elevation="32dp"
+        android:fontFamily="casual"
         android:gravity="center"
         android:text="@string/start_games_text"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/colorDarkGray"
+        android:textColor="@color/colorLightGray"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
