saved continue button

--- a/app/src/main/res/layout/activity_end_of_game.xml
+++ b/app/src/main/res/layout/activity_end_of_game.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="@string/end"
         android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
@@ -60,6 +61,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="@string/home"
         android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
@@ -79,6 +81,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorSecondary"
         android:elevation="9dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="@string/retry"
         android:textAllCaps="false"
         android:textColor="@color/colorDarkGray"
@@ -95,6 +98,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="@string/nice"
         android:textAlignment="center"
         android:textColor="@color/colorDarkGray"
