--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/amaranth_bold"
         android:gravity="center"
         android:text="@string/home_text"
         android:textAlignment="center"
