--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="8dp"
         android:background="@color/colorSecondaryDark"
         android:elevation="32dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/amaranth_bold"
         android:gravity="center"
         android:text="@string/start_games_text"
         android:textAlignment="center"
