--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -16,6 +16,8 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        android:background="@color/colorLightGray"
+        android:padding="7dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_label"
         app:layout_constraintVertical_bias="0.0"
@@ -27,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/amaranth_bold"
         android:gravity="center"
         android:text="@string/home_text"
         android:textAlignment="center"
