--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -27,7 +27,7 @@
         android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorSecondaryDark"
+        android:background="@drawable/rounded_button"
         android:elevation="32dp"
         android:fontFamily="casual"
         android:gravity="center"
